deployment-nginx-app-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app01
spec:
  selector:
    matchLabels:
      app: nginx-app01
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx-app01
    spec:
      containers:
      - name: nginx-app01
        image: nexus-repo.example.com/nginx-app01
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-app01
  labels:
    app: nginx-app01
    service: nginx-app01
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: nginx-app01
