app-01-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-app01
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-app01
spec:
  hosts:
  - "*"
  gateways:
  - nginx-app01
  http:
  - match:
    - uri:
        prefix: /app01
    route:
    - destination:
        host: nginx-app01
        port:
          number: 80
