app-01-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikingressroute-app01
  namespace: istio-system
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/app01`)
    kind: Rule
    services:
    - name: istio-ingressgateway
      port: 80
      strategy: RoundRobin
      scheme: h2c
