app-02-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-app02
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-app02
spec:
  hosts:
  - "*"
  gateways:
  - nginx-app02
  http:
  - match:
    - uri:
        prefix: /app02
    route:
    - destination:
        host: nginx-app02
        port:
          number: 80
